src/snapshots/openapi_generator__test_helpers__multi_array_variants.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum MultiArrayContent {
    MultiArrayContentString(MultiArrayContentString),
    MultiArrayContentStringArray(MultiArrayContentStringArray),
    MultiArrayContentArray(MultiArrayContentArray),
    ItemArray(ItemArray),
}
///Array variant in union
pub type MultiArrayContentStringArray = Vec<String>;
pub type MultiArrayContentString = String;
///Array variant in union
pub type MultiArrayContentArray = Vec<i64>;
///Array variant in union
pub type ItemArray = Vec<Item>;
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Item {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub name: Option<String>,
}
