src/snapshots/openapi_generator__test_helpers__nested_allof_composition.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TextMessage {
    pub id: String,
    pub msg_type: String,
    pub text: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TypedMessage {
    pub id: String,
    pub msg_type: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BaseMessage {
    pub id: String,
}
