src/snapshots/openapi_generator__test_helpers__nested_union_array.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum ComplexContent {
    SimpleBlock(SimpleBlock),
    ComplexContentArray(ComplexContentArray),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum ComplexContentItemUnion {
    ArrayItemString(ArrayItemString),
    Nested(NestedItem),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct NestedItem {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id: Option<String>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub value: Option<f64>,
}
pub type ArrayItemString = String;
///Array variant in union
pub type ComplexContentArray = Vec<ComplexContentItemUnion>;
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SimpleBlock {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub simple: Option<String>,
}
