src/snapshots/openapi_generator__test_helpers__oneof_in_property.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ImageBlock {
    pub source: ImageBlockSource,
    #[serde(rename = "type")]
    pub type_: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct URLImageSource {
    pub url: String,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(tag = "type")]
pub enum ImageBlockSource {
    #[serde(rename = "base64")]
    Base64ImageSource(Base64ImageSource),
    #[serde(rename = "url")]
    URLImageSource(URLImageSource),
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Base64ImageSource {
    pub data: String,
}
