src/snapshots/openapi_generator__test_helpers__property_underscore_types.snap
---
source: openapi-generator/src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct ConfigObject {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub cache_control: Option<ConfigObjectCacheControl>,
    pub display_settings: ConfigObjectDisplaySettings,
}
pub type ConfigObjectDisplaySettingsString = String;
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum ConfigObjectDisplaySettings {
    ConfigObjectDisplaySettingsString(ConfigObjectDisplaySettingsString),
    HeightBlock(HeightBlock),
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum ConfigObjectCacheControl {
    #[default]
    #[serde(rename = "ephemeral")]
    Ephemeral,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct HeightBlock {
    pub height: i64,
    pub width: i64,
}
